--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>W209finalproject by kelleydac-ischool</title>
+    <title>2013 CalSTAR Results</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,39 +11,166 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">W209finalproject</h1>
-      <h2 class="project-tagline">Navigate the 2013 CalSTAR standardized testing results for San Francisco</h2>
-      <a href="https://github.com/kelleydac-ischool/W209FinalProject" class="btn">View on GitHub</a>
-      <a href="https://github.com/kelleydac-ischool/W209FinalProject/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/kelleydac-ischool/W209FinalProject/tarball/master" class="btn">Download .tar.gz</a>
+      
+      <h1 class="project-tagline">Navigate the 2013 CalSTAR standardized testing results for San Francisco</h1>
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <p>The California Department of Education provides an anonymized summary of the STAR 
+      standardized test results broken down by school, test, grade, and demographic groups, 
+      but sorting through the data to answer some simple questions can be challenging. We 
+      have created this portal to simplify the process and make the data more accessible. </p>
+      <p>The visualizations below present the CalSTAR for San Francisco in 2013 to try to answer 6 questions:
+    <ol><li>Do charter schools play a significant role in Sanfrancisco? Where are they located in the city?</li>
+    <li>How is performance on the CalSTAR tests distributed about the city for different grades?</li>
+    <li>Is there a performance difference if students take a particular test in different grades?</li>
+    <li>Are there schools where students perform well on several tests?</li>
+    <li>Can we create a profile to compare school performance for a given test and grade?</li>
+    <li>Is there a pattern of performance across demographic groups within a school?</li>
+    </ol></p>
+    <p><a link="http://www.publiccharters.org/get-the-facts/public-charter-schools/">Charter 
+    schools</a> have been a novel but controversial addition to the public education system 
+    over the past two decades. While some see them as a way to improve student performance 
+    by allowing greater autonomy and providing more accountability for the school 
+    administration and faculty, <a link="http://dianeravitch.com">others </a> question 
+    whether these changes really result in any educational gains, and question the role 
+    and motives of private companies in operating these charters.</p>
+    <h3>Do charter schools show a different pattern of performance from traditional public schools in San Francisco?</h3>
+    <p>How do we characterize performance?
+     <br>
+     <br>
+     Performance is broken down into four levels:
+     <ul>
+     <li>Advanced</li>
+     <li>Proficient</li>
+     <li>Basic</li>
+     <li>Below Basic</li>
+     </ul>
+     Each test can be taken in different grades depending on the classes in which the student is enrolled.
+     <br>The dataset is anonymized in that no group of fewer than 10 students is represented in the dataset.
+     </p>
+       <script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
+       <div class='tableauPlaceholder' style='width: 1054px; height: 669px;'>
+       	<noscript><a href='#'><img alt='Story Title ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;sa&#47;sanFranciscov3&#47;charterStory&#47;1_rss.png' style='border: none' /></a></noscript>
+       	<object class='tableauViz' width='1020' height='669' style='display:none;'>
+       		<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+       		<param name='site_root' value='' />
+       		<param name='name' value='sanFranciscov3&#47;charterStory' />
+       		<param name='tabs' value='no' />
+       		<param name='toolbar' value='yes' />
+       		<param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;sa&#47;sanFranciscov3&#47;charterStory&#47;1.png' /> 
+       		<param name='animate_transition' value='yes' />
+       		<param name='display_static_image' value='yes' />
+       		<param name='display_spinner' value='yes' />
+       		<param name='display_overlay' value='yes' />
+       		<param name='display_count' value='yes' />
+       		<param name='showVizHome' value='no' />
+       		<param name='showTabs' value='y' />
+       		<param name='bootstrapWhenNotified' value='true' />
+       	</object>
+       </div>
+	   <p>The score maps show the total enrollment in testing for the groups selected, and 
+	   the percentage breakdown for each performance level. If we select multiple tests, 
+	   these percentages can sum to more than 100. Also if more than one school is in a 
+	   particular ZIP code, the percentages might sum to more than 100. </p>
+	   <script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
+	   <div class='tableauPlaceholder' style='width: 1054px; height: 669px;'>
+	   	<noscript><a href='#'><img alt='Story Title ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;GradeStory&#47;GradeStory&#47;1_rss.png' style='border: none' /></a></noscript>
+	   	<object class='tableauViz' width='1054' height='669' style='display:none;'>
+	   		<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+	   		<param name='site_root' value='' />
+	   		<param name='name' value='GradeStory&#47;GradeStory' />
+	   		<param name='tabs' value='no' />
+	   		<param name='toolbar' value='yes' />
+	   		<param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;GradeStory&#47;GradeStory&#47;1.png' /> 
+	   		<param name='animate_transition' value='yes' />
+	   		<param name='display_static_image' value='yes' />
+	   		<param name='display_spinner' value='yes' />
+	   		<param name='display_overlay' value='yes' />
+	   		<param name='display_count' value='yes' />
+	   		<param name='showVizHome' value='no' />
+	   		<param name='showTabs' value='y' />
+	   		<param name='bootstrapWhenNotified' value='true' />
+	   	</object>
+	   	</div>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-
+		<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
+		<div class='tableauPlaceholder' style='width: 1020px; height: 1033px;'>
+			<noscript><a href='#'><img alt='Story Title ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;GradeStory&#47;TestvGradeStory&#47;1_rss.png' style='border: none' /></a></noscript>
+			<object class='tableauViz' width='1020' height='1033' style='display:none;'>
+				<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+				<param name='site_root' value='' />
+				<param name='name' value='GradeStory&#47;TestvGradeStory' />
+				<param name='tabs' value='no' />
+				<param name='toolbar' value='yes' />
+				<param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;GradeStory&#47;TestvGradeStory&#47;1.png' /> 
+				<param name='animate_transition' value='yes' />
+				<param name='display_static_image' value='yes' />
+				<param name='display_spinner' value='yes' />
+				<param name='display_overlay' value='yes' />
+				<param name='display_count' value='yes' />
+				<param name='showVizHome' value='no' />
+				<param name='showTabs' value='y' />
+				<param name='bootstrapWhenNotified' value='true' />
+			</object>
+		</div>
+		<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
+		<div class='tableauPlaceholder' style='width: 1024px; height: 719px;'>
+		<noscript><a href='#'><img alt='Story Title ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;GradeStory&#47;LLMDBStory&#47;1_rss.png' style='border: none' /></a></noscript>
+		<object class='tableauViz' width='1024' height='719' style='display:none;'>
+			<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+			<param name='site_root' value='' />
+			<param name='name' value='GradeStory&#47;LLMDBStory' />
+			<param name='tabs' value='no' />
+			<param name='toolbar' value='yes' />
+			<param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;GradeStory&#47;LLMDBStory&#47;1.png' /> 
+			<param name='animate_transition' value='yes' />
+			<param name='display_static_image' value='yes' />
+			<param name='display_spinner' value='yes' />
+			<param name='display_overlay' value='yes' />
+			<param name='display_count' value='yes' />
+			<param name='showVizHome' value='no' />
+			<param name='showTabs' value='y' />
+			<param name='bootstrapWhenNotified' value='true' />
+		</object>
+		</div>
+		<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
+		<div class='tableauPlaceholder' style='width: 1024px; height: 669px;'>
+		<noscript><a href='#'><img alt='Story Title ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;GradeStory&#47;ProfileStory&#47;1_rss.png' style='border: none' /></a></noscript>
+		<object class='tableauViz' width='1024' height='669' style='display:none;'>
+			<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+			<param name='site_root' value='' />
+			<param name='name' value='GradeStory&#47;ProfileStory' />
+			<param name='tabs' value='no' />
+			<param name='toolbar' value='yes' />
+			<param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;GradeStory&#47;ProfileStory&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='showVizHome' value='no' /><param name='showTabs' value='y' /><param name='bootstrapWhenNotified' value='true' /></object></div>
+		<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
+		<div class='tableauPlaceholder' style='width: 1024px; height: 719px;'>
+		<noscript><a href='#'><img alt='Story Title ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;GradeStory&#47;DemoStory&#47;1_rss.png' style='border: none' /></a></noscript>
+		<object class='tableauViz' width='1024' height='719' style='display:none;'>
+			<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+			<param name='site_root' value='' />
+			<param name='name' value='GradeStory&#47;DemoStory' />
+			<param name='tabs' value='no' />
+			<param name='toolbar' value='yes' />
+			<param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;GradeStory&#47;DemoStory&#47;1.png' /> <param name='animate_transition' value='yes' />
+			<param name='display_static_image' value='yes' />
+			<param name='display_spinner' value='yes' />
+			<param name='display_overlay' value='yes' />
+			<param name='display_count' value='yes' />
+			<param name='showVizHome' value='no' />
+			<param name='showTabs' value='y' />
+			<param name='bootstrapWhenNotified' value='true' />
+		</object>
+		</div>
+	<p>Some schools, particularly in the western part of the city, show very high performance 
+	in a number of subjects among several demographic groups. One exception for some subjects 
+	like geometry is that students who take this test in later grades typically show lower 
+	performance levels across the board. Schools in the central and southeastern parts of 
+	the city typically show lower performance levels. Charters cluster in these lower 
+	performing areas, and show equivalent performance to traditional public schools. This 
+	dataset does not show a significant performance difference for charters beyond the 
+	location effect (which may be primarily reflective of socioeconomic factors).</p>
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/kelleydac-ischool/W209FinalProject">W209finalproject</a> is maintained by <a href="https://github.com/kelleydac-ischool">kelleydac-ischool</a>.</span>
 
