Fix typo in title

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       
-      <h1 class="project-title">Navigate the 2013 CalSTAR standardized testing results for San Francisco</h1>
+      <h1 class="project-title">Navigating the 2013 CalSTAR standardized testing results for San Francisco</h1>
     </section>
 
     <section class="main-content">
