add points to intro

--- a/index.html
+++ b/index.html
@@ -47,8 +47,17 @@
      <li>Below Basic</li>
      </ul>
      Each test can be taken in different grades depending on the classes in which the student is enrolled.
-     <br>The dataset is anonymized in that no group of fewer than 10 students is represented in the dataset.
+     The dataset is anonymized in that no group of fewer than 10 students is represented in the dataset.
      </p>
+     <p>The visualizations below will show the following points:
+     <ul>
+     <li>Charters are concentrated in the central and southeastern parts of San Francisco.</li>
+     <li>Higher scores are typically found in the northern and western parts of San Francisco, 
+     and lower scores in the central and southeastern parts. </li>
+     <li>Tests for some subjects (mostly math) taken in later grades how poorer performance 
+     than when taken in earlier grades for all schools.</p>
+     <li>Schools tend to have good or poor performance across several subjects and demographic groups.</li>
+     </ul>
        <script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
        <div class='tableauPlaceholder' style='width: 1054px; height: 669px;'>
        	<noscript><a href='#'><img alt='Story Title ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;sa&#47;sanFranciscov3&#47;charterStory&#47;1_rss.png' style='border: none' /></a></noscript>
