--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
      <li>Charters are concentrated in the central and southeastern parts of San Francisco.</li>
      <li>Higher scores are typically found in the northern and western parts of San Francisco, 
      and lower scores in the central and southeastern parts. </li>
-     <li>Tests for some subjects (mostly math) taken in later grades how poorer performance 
+     <li>Tests for some subjects (primarily math but not science) taken in later grades show poorer performance 
      than when taken in earlier grades for all schools.</p>
      <li>Schools tend to have good or poor performance across several subjects and demographic groups.</li>
      </ul>
