fix tag in intro

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
      <li>Higher scores are typically found in the northern and western parts of San Francisco, 
      and lower scores in the central and southeastern parts. </li>
      <li>Tests for some subjects (primarily math but not science) taken in later grades show poorer performance 
-     than when taken in earlier grades for all schools.</p>
+     than when taken in earlier grades for all schools.</li>
      <li>Schools tend to have good or poor performance across several subjects and demographic groups.</li>
      </ul>
        <script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
