--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
      <li>Charters are concentrated in the central and southeastern parts of San Francisco.</li>
      <li>Higher scores are typically found in the northern and western parts of San Francisco, 
      and lower scores in the central and southeastern parts. </li>
-     <li>Tests for some subjects (primarily math but not science) taken in later grades show poorer performance 
-     than when taken in earlier grades for all schools.</li>
      <li>Schools tend to have good or poor performance across several subjects and demographic groups.</li>
+     <li>However, tests for some subjects (primarily math but not science) taken in later grades show poorer performance 
+     than when taken in earlier grades for all schools.</li>
      </ul>
      <p>Which schools are in which zip code throughout the city?</p>
      <script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
@@ -79,10 +79,28 @@
      	<param name='bootstrapWhenNotified' value='true' />
      	</object>
        </div>
-	   <p>The score maps show the total enrollment in testing for the groups selected, and 
-	   the percentage breakdown for each performance level. If we select multiple tests, 
-	   these percentages can sum to more than 100. Also if more than one school is in a 
-	   particular ZIP code, the percentages might sum to more than 100. </p>
+       <p>What test data is available for each grade and zip code?</p>
+       <script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
+       <div class='tableauPlaceholder' style='width: 1020px; height: 669px;'>
+       	<noscript><a href='#'><img alt='Story Title ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;te&#47;testLocation&#47;TestAvailability&#47;1_rss.png' style='border: none' /></a></noscript>
+       	<object class='tableauViz' width='1020' height='669' style='display:none;'>
+       		<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+       		<param name='site_root' value='' />
+       		<param name='name' value='testLocation&#47;TestAvailability' />
+       		<param name='tabs' value='no' />
+       		<param name='toolbar' value='yes' />
+       		<param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;te&#47;testLocation&#47;TestAvailability&#47;1.png' /> 
+       		<param name='animate_transition' value='yes' />
+       		<param name='display_static_image' value='yes' />
+       		<param name='display_spinner' value='yes' />
+       		<param name='display_overlay' value='yes' />
+       		<param name='display_count' value='yes' />
+       		<param name='showVizHome' value='no' />
+       		<param name='showTabs' value='y' />
+       		<param name='bootstrapWhenNotified' value='true' />
+       		</object>
+       	</div>
+	   <p>How are the students distributed about the city? How does performance vary for each zip code?</p>
 	   <script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
 	   <div class='tableauPlaceholder' style='width: 1054px; height: 669px;'>
 	   	<noscript><a href='#'><img alt='Story Title ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;GradeStory&#47;GradeStory&#47;1_rss.png' style='border: none' /></a></noscript>
@@ -104,26 +122,7 @@
 	   	</object>
 	   	</div>
 
-		<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
-		<div class='tableauPlaceholder' style='width: 1020px; height: 1033px;'>
-			<noscript><a href='#'><img alt='Story Title ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;GradeStory&#47;TestvGradeStory&#47;1_rss.png' style='border: none' /></a></noscript>
-			<object class='tableauViz' width='1020' height='1033' style='display:none;'>
-				<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
-				<param name='site_root' value='' />
-				<param name='name' value='GradeStory&#47;TestvGradeStory' />
-				<param name='tabs' value='no' />
-				<param name='toolbar' value='yes' />
-				<param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;GradeStory&#47;TestvGradeStory&#47;1.png' /> 
-				<param name='animate_transition' value='yes' />
-				<param name='display_static_image' value='yes' />
-				<param name='display_spinner' value='yes' />
-				<param name='display_overlay' value='yes' />
-				<param name='display_count' value='yes' />
-				<param name='showVizHome' value='no' />
-				<param name='showTabs' value='y' />
-				<param name='bootstrapWhenNotified' value='true' />
-			</object>
-		</div>
+        <p>Considering just two schools, how does the performance compare across subjects?</p>
 		<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
 		<div class='tableauPlaceholder' style='width: 1024px; height: 719px;'>
 		<noscript><a href='#'><img alt='Story Title ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;GradeStory&#47;LLMDBStory&#47;1_rss.png' style='border: none' /></a></noscript>
@@ -144,6 +143,8 @@
 			<param name='bootstrapWhenNotified' value='true' />
 		</object>
 		</div>
+		<p>Can we build a simple profile for each school? Profiles that are higher on the 
+		left end indicate higher performance than profiles that are higher on the right end.</p>
 		<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
 		<div class='tableauPlaceholder' style='width: 1024px; height: 669px;'>
 		<noscript><a href='#'><img alt='Story Title ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;GradeStory&#47;ProfileStory&#47;1_rss.png' style='border: none' /></a></noscript>
@@ -153,7 +154,18 @@
 			<param name='name' value='GradeStory&#47;ProfileStory' />
 			<param name='tabs' value='no' />
 			<param name='toolbar' value='yes' />
-			<param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;GradeStory&#47;ProfileStory&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='showVizHome' value='no' /><param name='showTabs' value='y' /><param name='bootstrapWhenNotified' value='true' /></object></div>
+			<param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;GradeStory&#47;ProfileStory&#47;1.png' /> 
+			<param name='animate_transition' value='yes' />
+			<param name='display_static_image' value='yes' />
+			<param name='display_spinner' value='yes' />
+			<param name='display_overlay' value='yes' />
+			<param name='display_count' value='yes' />
+			<param name='showVizHome' value='no' />
+			<param name='showTabs' value='y' />
+			<param name='bootstrapWhenNotified' value='true' />
+			</object>
+		</div>
+		<p>Do schools show consistent performance for several demographic groups?</p>
 		<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
 		<div class='tableauPlaceholder' style='width: 1024px; height: 719px;'>
 		<noscript><a href='#'><img alt='Story Title ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;GradeStory&#47;DemoStory&#47;1_rss.png' style='border: none' /></a></noscript>
@@ -172,6 +184,29 @@
 			<param name='showTabs' value='y' />
 			<param name='bootstrapWhenNotified' value='true' />
 		</object>
+		</div>
+		<p>As an exception to the rule that some schools show good performance across subjects, 
+		when some math tests are taken in later grades, the performance is consistently worse. 
+		Other subjects, like sciences, do not show this pattern.</p>
+		<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
+		<div class='tableauPlaceholder' style='width: 1020px; height: 1033px;'>
+			<noscript><a href='#'><img alt='Story Title ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;GradeStory&#47;TestvGradeStory&#47;1_rss.png' style='border: none' /></a></noscript>
+			<object class='tableauViz' width='1020' height='1033' style='display:none;'>
+				<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+				<param name='site_root' value='' />
+				<param name='name' value='GradeStory&#47;TestvGradeStory' />
+				<param name='tabs' value='no' />
+				<param name='toolbar' value='yes' />
+				<param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;GradeStory&#47;TestvGradeStory&#47;1.png' /> 
+				<param name='animate_transition' value='yes' />
+				<param name='display_static_image' value='yes' />
+				<param name='display_spinner' value='yes' />
+				<param name='display_overlay' value='yes' />
+				<param name='display_count' value='yes' />
+				<param name='showVizHome' value='no' />
+				<param name='showTabs' value='y' />
+				<param name='bootstrapWhenNotified' value='true' />
+			</object>
 		</div>
 	<p>Some schools, particularly in the western part of the city, show very high performance 
 	in a number of subjects among several demographic groups. One exception for some subjects 
