--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
      <li>However, tests for some subjects (primarily math but not science) taken in later grades show poorer performance 
      than when taken in earlier grades for all schools.</li>
      </ul>
-     <p>Which schools are in which zip code throughout the city?</p>
+     <hr>
      <script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
      <div class='tableauPlaceholder' style='width: 1020px; height: 869px;'>
      <noscript><a href='#'><img alt='Story Title ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Sc&#47;SchoolsFrame&#47;SchoolMap&#47;1_rss.png' style='border: none' /></a></noscript>
@@ -79,7 +79,7 @@
      	<param name='bootstrapWhenNotified' value='true' />
      	</object>
        </div>
-       <p>What test data is available for each grade and zip code?</p>
+       <hr>
        <script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
        <div class='tableauPlaceholder' style='width: 1020px; height: 669px;'>
        	<noscript><a href='#'><img alt='Story Title ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;te&#47;testLocation&#47;TestAvailability&#47;1_rss.png' style='border: none' /></a></noscript>
@@ -100,17 +100,17 @@
        		<param name='bootstrapWhenNotified' value='true' />
        		</object>
        	</div>
-	   <p>How are the students distributed about the city? How does performance vary for each zip code?</p>
+	   <hr>
 	   <script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
-	   <div class='tableauPlaceholder' style='width: 1054px; height: 669px;'>
-	   	<noscript><a href='#'><img alt='Story Title ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;GradeStory&#47;GradeStory&#47;1_rss.png' style='border: none' /></a></noscript>
-	   	<object class='tableauViz' width='1054' height='669' style='display:none;'>
+	   <div class='tableauPlaceholder' style='width: 1020px; height: 1033px;'>
+	   	<noscript><a href='#'><img alt='Story Title ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Sc&#47;ScoreMap&#47;ScoreMap&#47;1_rss.png' style='border: none' /></a></noscript>
+	   	<object class='tableauViz' width='1020' height='1033' style='display:none;'>
 	   		<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
 	   		<param name='site_root' value='' />
-	   		<param name='name' value='GradeStory&#47;GradeStory' />
+	   		<param name='name' value='ScoreMap&#47;ScoreMap' />
 	   		<param name='tabs' value='no' />
 	   		<param name='toolbar' value='yes' />
-	   		<param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;GradeStory&#47;GradeStory&#47;1.png' /> 
+	   		<param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Sc&#47;ScoreMap&#47;ScoreMap&#47;1.png' /> 
 	   		<param name='animate_transition' value='yes' />
 	   		<param name='display_static_image' value='yes' />
 	   		<param name='display_spinner' value='yes' />
@@ -120,9 +120,9 @@
 	   		<param name='showTabs' value='y' />
 	   		<param name='bootstrapWhenNotified' value='true' />
 	   	</object>
-	   	</div>
+	   </div>
 
-        <p>Considering just two schools, how does the performance compare across subjects?</p>
+        <hr>
 		<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
 		<div class='tableauPlaceholder' style='width: 1024px; height: 719px;'>
 		<noscript><a href='#'><img alt='Story Title ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;GradeStory&#47;LLMDBStory&#47;1_rss.png' style='border: none' /></a></noscript>
@@ -143,8 +143,7 @@
 			<param name='bootstrapWhenNotified' value='true' />
 		</object>
 		</div>
-		<p>Can we build a simple profile for each school? Profiles that are higher on the 
-		left end indicate higher performance than profiles that are higher on the right end.</p>
+		<hr>
 		<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
 		<div class='tableauPlaceholder' style='width: 1024px; height: 669px;'>
 		<noscript><a href='#'><img alt='Story Title ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;GradeStory&#47;ProfileStory&#47;1_rss.png' style='border: none' /></a></noscript>
@@ -165,7 +164,7 @@
 			<param name='bootstrapWhenNotified' value='true' />
 			</object>
 		</div>
-		<p>Do schools show consistent performance for several demographic groups?</p>
+		<hr>
 		<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
 		<div class='tableauPlaceholder' style='width: 1024px; height: 719px;'>
 		<noscript><a href='#'><img alt='Story Title ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;GradeStory&#47;DemoStory&#47;1_rss.png' style='border: none' /></a></noscript>
@@ -211,7 +210,8 @@
 	<p>Some schools, particularly in the western part of the city, show very high performance 
 	in a number of subjects among several demographic groups. One exception for some subjects 
 	like geometry is that students who take this test in later grades typically show lower 
-	performance levels across the board. Schools in the central and southeastern parts of 
+	performance levels across the board. </p>
+	<p>Schools in the central and southeastern parts of 
 	the city typically show lower performance levels. Charters cluster in these lower 
 	performing areas, and show equivalent performance to traditional public schools. This 
 	dataset does not show a significant performance difference for charters beyond the 
