--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
   <body>
     <section class="page-header">
       
-      <h1 class="project-title">Navigating the 2013 CalSTAR standardized testing results for San Francisco</h1>
+      <h1 class="project-title">Navigating the 2013 California STAR standardized testing results for San Francisco</h1>
+      <h2 class="project-title">Created by Jess Hinel and Doug Kelley for UCB MIDS W209 Summer 2015</h2>
     </section>
 
     <section class="main-content">
-      <p>The California Department of Education provides an anonymized summary of the STAR 
+      <p>The California Department of Education provides an 
+      <a link="http://star.cde.ca.gov/star2013/index.aspx">anonymized summary</a> of the STAR 
       standardized test results broken down by school, test, grade, and demographic groups, 
       but sorting through the data to answer some simple questions can be challenging. We 
       have created this portal to simplify the process and make the data more accessible. </p>
