--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       
-      <h1 class="project-title">Navigating the 2013 California STAR standardized testing results for San Francisco</h1>
+      <h1 class="project-title">Navigating the 2013 California STAR standardized testing results<br> for San Francisco</h1>
       <h2 class="project-title">Created by Jess Hinel and Doug Kelley for UCB MIDS W209 Summer 2015</h2>
     </section>
 
