fix anchor reference

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <section class="main-content">
       <p>The California Department of Education provides an 
-      <a link="http://star.cde.ca.gov/star2013/index.aspx">anonymized summary</a> of the STAR 
+      <a href="http://star.cde.ca.gov/star2013/index.aspx">anonymized summary</a> of the STAR 
       standardized test results broken down by school, test, grade, and demographic groups, 
       but sorting through the data to answer some simple questions can be challenging. We 
       have created this portal to simplify the process and make the data more accessible. </p>
