fix two other link targets

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <li>Can we create a profile to compare school performance for a given test and grade?</li>
     <li>Is there a pattern of performance across demographic groups within a school?</li>
     </ol></p>
-    <p><a link="http://www.publiccharters.org/get-the-facts/public-charter-schools/">Charter 
+    <p><a href="http://www.publiccharters.org/get-the-facts/public-charter-schools/">Charter 
     schools</a> have been a novel but controversial addition to the public education system 
     over the past two decades. While some see them as a way to improve student performance 
     by allowing greater autonomy and providing more accountability for the school 
-    administration and faculty, <a link="http://dianeravitch.com">others </a> question 
+    administration and faculty, <a href="http://dianeravitch.com">others </a> question 
     whether these changes really result in any educational gains, and question the role 
     and motives of private companies in operating these charters.</p>
     <h3>Do charter schools show a different pattern of performance from traditional public schools in San Francisco?</h3>
