text changes; add more links

--- a/index.html
+++ b/index.html
@@ -34,23 +34,28 @@
     schools</a> have been a novel but controversial addition to the public education system 
     over the past two decades. While some see them as a way to improve student performance 
     by allowing greater autonomy and providing more accountability for the school 
-    administration and faculty, <a href="http://dianeravitch.com">others </a> question 
+    administration and faculty, 
+    <a href="http://www.latimes.com/opinion/op-ed/la-oe-ravitch-charters-school-reform-20131001-story.html">others </a> question 
     whether these changes really result in any educational gains, and question the role 
     and motives of private companies in operating these charters.</p>
     <h3>Do charter schools show a different pattern of performance from traditional public schools in San Francisco?</h3>
     <p>How do we characterize performance?
      <br>
      <br>
-     Performance is broken down into four levels:
+     Performance is broken down into five levels:
      <ul>
      <li>Advanced</li>
      <li>Proficient</li>
      <li>Basic</li>
      <li>Below Basic</li>
+     <li>Far Below Basic</li>
      </ul>
-     Each test can be taken in different grades depending on the classes in which the student is enrolled.
-     The dataset is anonymized in that no group of fewer than 10 students is represented in the dataset.
+     For simplicity, we show only the top four levels below.</p>
+     <p>Each test can be taken in different grades depending on the classes in which the student is enrolled.
+     The dataset is anonymized in that no group of fewer than 10 students is represented in the dataset.</p>
      </p>
+     <p>More information on the scoring methods and the performance standards can be found 
+     <a href="http://star.cde.ca.gov/star2006/help_scoreexplanations.asp">here</a>.</p>
      <p>The visualizations below will show the following points:
      <ul>
      <li>Charters are concentrated in the central and southeastern parts of San Francisco.</li>
@@ -210,13 +215,19 @@
 	<p>Some schools, particularly in the western part of the city, show very high performance 
 	in a number of subjects among several demographic groups. One exception for some subjects 
 	like geometry is that students who take this test in later grades typically show lower 
-	performance levels across the board. While this pattern holds for math tests, it does
+	performance levels. While this pattern holds for math tests, it does
 	 not appear to hold for science tests. </p>
 	<p>Schools in the central and southeastern parts of 
 	the city typically show lower performance levels. Charters cluster in these lower 
 	performing areas, and show equivalent performance to traditional public schools. This 
 	dataset does not show a significant performance difference for charters beyond the 
 	location effect (which may be primarily reflective of socioeconomic factors).</p>
+	<p>Do these charts tell us which schools are better than others? As discussed at length 
+	by <a href = "http://knopfdoubleday.com/book/228036/reign-of-error">Diane Ravitch</a>,
+	standardized testing performance may be a very poor indicator of 
+	educational quality, and may have far more to do with the familiarity of the students 
+	with the test procedures than the material itself. Further, the performance standards 
+	are not fixed and are often adjusted from year to year.
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/kelleydac-ischool/W209FinalProject">W209finalproject</a> is maintained by <a href="https://github.com/kelleydac-ischool">kelleydac-ischool</a>.</span>
 
