fix typos and frame size for last graph

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       but sorting through the data to answer some simple questions can be challenging. We 
       have created this portal to simplify the process and make the data more accessible. </p>
       <p>The visualizations below present the CalSTAR for San Francisco in 2013 to try to answer 6 questions:
-    <ol><li><h4>Do charter schools play a significant role in Sanfrancisco? Where are they located in the city?</h4></li>
-    <li><h4>How is performance on the CalSTAR tests distributed about the city for different grades?</h4></li>
+    <ol><li><h4>Do charter schools play a significant role in San Francisco? Where are they located in the city?</h4></li>
+    <li><h4>How is performance on the CalSTAR tests distributed across the city for different grades?</h4></li>
     <li><h4>Is there a performance difference if students take a particular test in different grades?</h4></li>
     <li><h4>Are there schools where students perform well on several tests?</h4></li>
     <li><h4>Can we create a profile to compare school performance for a given test and grade?</h4></li>
@@ -109,7 +109,7 @@
        		<param name='bootstrapWhenNotified' value='true' />
        		</object>
        	</div>
-       	 <h3>While not all schools report data from all tests, we can compare performance from several tests (like CST Science) wich are reported from many zip codes<./h3>
+       	 <h3>While not all schools report data from all tests, we can compare performance from several tests (like CST Science) wich are reported from many zip codes.</h3>
 	   <hr>
 	   <script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
 	   <div class='tableauPlaceholder' style='width: 1020px; height: 1033px;'>
@@ -199,7 +199,7 @@
 		<h3>When we look across demographic groups, we find the same performance clusters for several groups.</h3>
 		<hr>
 		<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
-		<div class='tableauPlaceholder' style='width: 1020px; height: 1033px;'>
+		<div class='tableauPlaceholder' style='width: 1020px; height: 669px;'>
 			<noscript><a href='#'><img alt='Story Title ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;GradeStory&#47;TestvGradeStory&#47;1_rss.png' style='border: none' /></a></noscript>
 			<object class='tableauViz' width='1020' height='1033' style='display:none;'>
 				<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
