--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
        		<param name='bootstrapWhenNotified' value='true' />
        		</object>
        	</div>
-       	 <h3>While not all schools report data from all tests, we can compare performance from several tests (like CST Science) wich are reported from many zip codes.</h3>
+       	 <h3>While not all schools report data from all tests, we can compare performance from several tests (like CST Science) which are reported from many zip codes.</h3>
 	   <hr>
 	   <script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
 	   <div class='tableauPlaceholder' style='width: 1020px; height: 1033px;'>
