change wording of conclusions

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 	<p>Some schools, particularly in the western part of the city, show very high performance 
 	in a number of subjects among several demographic groups. One exception for some subjects 
 	like geometry is that students who take this test in later grades typically show lower 
-	performance levels. While this pattern holds for math tests, it does
+	performance levels. While this exception holds for math tests, it does
 	 not appear to hold for science tests. </p>
 	<p>Schools in the central and southeastern parts of 
 	the city typically show lower performance levels. Charters cluster in these lower 
