--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
       have created this portal to simplify the process and make the data more accessible. </p>
       <p>The visualizations below present the CalSTAR for San Francisco in 2013 to try to answer 6 questions:
     <ol><li><h4>Do charter schools play a significant role in San Francisco? Where are they located in the city?</h4></li>
-    <li><h4>How is performance on the CalSTAR tests distributed across the city for different grades?</h4></li>
-    <li><h4>Is there a performance difference if students take a particular test in different grades?</h4></li>
+    <li><h4>How is performance on the California STAR tests distributed across the city for different grades?</h4></li>
     <li><h4>Are there schools where students perform well on several tests?</h4></li>
     <li><h4>Can we create a profile to compare school performance for a given test and grade?</h4></li>
     <li><h4>Is there a pattern of performance across demographic groups within a school?</h4></li>
+    <li><h4>Is there a performance difference if students take a particular test in different grades?</h4></li>
     </ol></p>
     <h3>Do charter schools show a different pattern of performance from traditional public schools in San Francisco?</h3>
     <p><a href="http://www.publiccharters.org/get-the-facts/public-charter-schools/">Charter 
