one more fix for intro conclusions

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
      and lower scores in the central and southeastern parts. </li>
      <li>Schools tend to have good or poor performance across several subjects and demographic groups.</li>
      <li>However, tests for some subjects (primarily math but not science) taken in later grades show poorer performance 
-     than when taken in earlier grades for all schools.</li>
+     than when taken in earlier grades.</li>
      </ul>
      <hr>
      <script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
