--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       standardized test results broken down by school, test, grade, and demographic groups, 
       but sorting through the data to answer some simple questions can be challenging. We 
       have created this portal to simplify the process and make the data more accessible. </p>
-      <p>The visualizations below present the CalSTAR for San Francisco in 2013 to try to answer 6 questions:
+      <p>We will try to answer 6 questions using the visualizations below:
     <ol><li><h4>Do charter schools play a significant role in San Francisco? Where are they located in the city?</h4></li>
     <li><h4>How is performance on the California STAR tests distributed across the city for different grades?</h4></li>
     <li><h4>Are there schools where students perform well on several tests?</h4></li>
